--- a/docs/90-api/mat4.mdx
+++ b/docs/90-api/mat4.mdx
@@ -9,7 +9,43 @@ id: Mat4
 
 ### Mat4() {#Mat4}
 
+### Mat4(float) {#Mat4-float}
+
+### Mat4(float, float, float, float, float, float, float, float, float, float, float, float, float, float, float, float) {#Mat4-float-float-float-float-float-float-float-float-float-float-float-float-float-float-float-float}
+
 ### Mat4(Vec4, Vec4, Vec4, Vec4) {#Mat4-Vec4-Vec4-Vec4-Vec4}
+
+### Mat4(Vec4, Vec4, Vec4, Vec4i) {#Mat4-Vec4-Vec4-Vec4-Vec4i}
+
+### Mat4(Vec4, Vec4, Vec4i, Vec4) {#Mat4-Vec4-Vec4-Vec4i-Vec4}
+
+### Mat4(Vec4, Vec4, Vec4i, Vec4i) {#Mat4-Vec4-Vec4-Vec4i-Vec4i}
+
+### Mat4(Vec4, Vec4i, Vec4, Vec4) {#Mat4-Vec4-Vec4i-Vec4-Vec4}
+
+### Mat4(Vec4, Vec4i, Vec4, Vec4i) {#Mat4-Vec4-Vec4i-Vec4-Vec4i}
+
+### Mat4(Vec4, Vec4i, Vec4i, Vec4) {#Mat4-Vec4-Vec4i-Vec4i-Vec4}
+
+### Mat4(Vec4, Vec4i, Vec4i, Vec4i) {#Mat4-Vec4-Vec4i-Vec4i-Vec4i}
+
+### Mat4(Vec4i, Vec4, Vec4, Vec4) {#Mat4-Vec4i-Vec4-Vec4-Vec4}
+
+### Mat4(Vec4i, Vec4, Vec4, Vec4i) {#Mat4-Vec4i-Vec4-Vec4-Vec4i}
+
+### Mat4(Vec4i, Vec4, Vec4i, Vec4) {#Mat4-Vec4i-Vec4-Vec4i-Vec4}
+
+### Mat4(Vec4i, Vec4, Vec4i, Vec4i) {#Mat4-Vec4i-Vec4-Vec4i-Vec4i}
+
+### Mat4(Vec4i, Vec4i, Vec4, Vec4) {#Mat4-Vec4i-Vec4i-Vec4-Vec4}
+
+### Mat4(Vec4i, Vec4i, Vec4, Vec4i) {#Mat4-Vec4i-Vec4i-Vec4-Vec4i}
+
+### Mat4(Vec4i, Vec4i, Vec4i, Vec4) {#Mat4-Vec4i-Vec4i-Vec4i-Vec4}
+
+### Mat4(Vec4i, Vec4i, Vec4i, Vec4i) {#Mat4-Vec4i-Vec4i-Vec4i-Vec4i}
+
+### Mat4(Mat3) {#Mat4-Mat3}
 
 ### Mat4(Mat4) {#Mat4-Mat4}
 
@@ -21,25 +57,55 @@ id: Mat4
 
 ### Mat4 __add(Mat4, Mat4) {#Mat4-add-Mat4-Mat4}
 
+### Mat4 __add(Mat4, float) {#Mat4-add-Mat4-float}
+
+### Mat4 __add(float, Mat4) {#Mat4-add-float-Mat4}
+
 ### Mat4 __sub(Mat4, Mat4) {#Mat4-sub-Mat4-Mat4}
+
+### Mat4 __sub(Mat4, float) {#Mat4-sub-Mat4-float}
+
+### Mat4 __sub(float, Mat4) {#Mat4-sub-float-Mat4}
+
+### Mat4 __unm(Mat4) {#Mat4-unm-Mat4}
 
 ### bool __eq(Mat4, Mat4) {#bool-eq-Mat4-Mat4}
 
+## List of Methods
+
+### float GetDeterminant() {#float-GetDeterminant}
+
+### Mat4 Transpose() {#Mat4-Transpose}
+
+### Mat4 GetTransposed() {#Mat4-GetTransposed}
+
+### Mat4 Invert() {#Mat4-Invert}
+
+### Mat4 GetInverted() {#Mat4-GetInverted}
+
+### bool IsIdentity(float) {#bool-IsIdentity-float}
+
+### bool IsZero() {#bool-IsZero}
+
+### bool IsSingular() {#bool-IsSingular}
+
+### bool IsAnyNaN() {#bool-IsAnyNaN}
+
 ## List of Properties
 
-### Vec4 xaxis {#Vec4-xaxis}
+### Vec3 xaxis {#Vec3-xaxis}
 
-### Vec4 yaxis {#Vec4-yaxis}
+### Vec3 yaxis {#Vec3-yaxis}
 
-### Vec4 zaxis {#Vec4-zaxis}
+### Vec3 zaxis {#Vec3-zaxis}
 
-### Vec4 translation {#Vec4-translation}
+### Vec3 translation {#Vec3-translation}
 
-### Vec4 row1 {#Vec4-row1}
+### Vec3 row1 {#Vec3-row1}
 
-### Vec4 row2 {#Vec4-row2}
+### Vec3 row2 {#Vec3-row2}
 
-### Vec4 row3 {#Vec4-row3}
+### Vec3 row3 {#Vec3-row3}
 
-### Vec4 row4 {#Vec4-row4}
+### Vec3 row4 {#Vec3-row4}
 
