--- a/docs/90-api/realtimeLightingInfo.mdx
+++ b/docs/90-api/realtimeLightingInfo.mdx
@@ -11,6 +11,10 @@ id: RealtimeLightingInfo
 
 ### bool shadows {#bool-shadows}
 
+### float shadowsIntensity {#float-shadowsIntensity}
+
+### float diffuseDirSpread {#float-diffuseDirSpread}
+
 ### bool ambientOcclusion {#bool-ambientOcclusion}
 
 ### int diffuseSamples {#int-diffuseSamples}
