--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -72,6 +72,10 @@ end
 
 ### void SendMessage(string, table, int) {#void-SendMessage-string-table-int}
 
+### void RPC(string, ...) {#void-RPC-string}
+
+### void RPC2(int, string, ...) {#void-RPC2-int-string}
+
 ## List of Properties
 
 ### string type {#string-type}
