--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -25,6 +25,8 @@ This class is only available on server
 
 ### table GetVoxelStreamStats(int clientID) {#table-GetVoxelStreamStats-int-clientID}
 
+### void SaveVoxelData() {#void-SaveVoxelData}
+
 ### table GetServerConnectionInfo() {#table-GetServerConnectionInfo}
 
 ### table GetConnectionInfos() {#table-GetConnectionInfos}
@@ -38,6 +40,8 @@ This class is only available on server
 ### bool IsClient() {#bool-IsClient}
 
 ### bool IsServer() {#bool-IsServer}
+
+### bool DevMode() {#bool-DevMode}
 
 ### int GetCurrentUIActionID() {#int-GetCurrentUIActionID}
 
