--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -11,11 +11,27 @@ id: Vec2
 
 ### Vec2(float) {#Vec2-float}
 
+### Vec2(int) {#Vec2-int}
+
 ### Vec2(float, float) {#Vec2-float-float}
+
+### Vec2(float, int) {#Vec2-float-int}
+
+### Vec2(int, float) {#Vec2-int-float}
+
+### Vec2(int, int) {#Vec2-int-int}
 
 ### Vec2(Vec2) {#Vec2-Vec2}
 
 ### Vec2(Vec2i) {#Vec2-Vec2i}
+
+### Vec2(Vec3) {#Vec2-Vec3}
+
+### Vec2(Vec3i) {#Vec2-Vec3i}
+
+### Vec2(Vec4) {#Vec2-Vec4}
+
+### Vec2(Vec4i) {#Vec2-Vec4i}
 
 ## List of Metamethods
 
@@ -55,13 +71,27 @@ id: Vec2
 
 ### Vec2 __div(float, Vec2) {#Vec2-div-float-Vec2}
 
+### Vec2 __mod(Vec2, Vec2) {#Vec2-mod-Vec2-Vec2}
+
+### Vec2 __mod(Vec2, Vec2i) {#Vec2-mod-Vec2-Vec2i}
+
+### Vec2 __mod(Vec2, float) {#Vec2-mod-Vec2-float}
+
+### Vec2 __mod(float, Vec2) {#Vec2-mod-float-Vec2}
+
+### Vec2 __pow(Vec2, Vec2) {#Vec2-pow-Vec2-Vec2}
+
+### Vec2 __pow(Vec2, Vec2i) {#Vec2-pow-Vec2-Vec2i}
+
+### Vec2 __pow(Vec2, float) {#Vec2-pow-Vec2-float}
+
+### Vec2 __pow(float, Vec2) {#Vec2-pow-float-Vec2}
+
 ### Vec2 __unm(Vec2) {#Vec2-unm-Vec2}
 
 ### bool __eq(Vec2, Vec2) {#bool-eq-Vec2-Vec2}
 
 ### bool __eq(Vec2, Vec2i) {#bool-eq-Vec2-Vec2i}
-
-### float __len(Vec2) {#float-len-Vec2}
 
 ## List of Methods
 
@@ -70,12 +100,6 @@ id: Vec2
 ### float SqrLength() {#float-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
-
-### float GetMinComponent() {#float-GetMinComponent}
-
-### float GetMaxComponent() {#float-GetMaxComponent}
-
-### bool IsWithin(float) {#bool-IsWithin-float}
 
 ### Vec2 GetAbs() {#Vec2-GetAbs}
 
