--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -27,13 +27,47 @@ This action is dangerous
 
 ### Vec3(float) {#Vec3-float}
 
+### Vec3(int) {#Vec3-int}
+
 ### Vec3(float, float, float) {#Vec3-float-float-float}
 
+### Vec3(float, float, int) {#Vec3-float-float-int}
+
+### Vec3(float, int, float) {#Vec3-float-int-float}
+
+### Vec3(float, int, int) {#Vec3-float-int-int}
+
+### Vec3(int, float, float) {#Vec3-int-float-float}
+
+### Vec3(int, float, int) {#Vec3-int-float-int}
+
+### Vec3(int, int, float) {#Vec3-int-int-float}
+
+### Vec3(int, int, int) {#Vec3-int-int-int}
+
 ### Vec3(Vec2, float) {#Vec3-Vec2-float}
+
+### Vec3(Vec2, int) {#Vec3-Vec2-int}
+
+### Vec3(Vec2i, float) {#Vec3-Vec2i-float}
+
+### Vec3(Vec2i, int) {#Vec3-Vec2i-int}
+
+### Vec3(float, Vec2) {#Vec3-float-Vec2}
+
+### Vec3(float, Vec2i) {#Vec3-float-Vec2i}
+
+### Vec3(int, Vec2) {#Vec3-int-Vec2}
+
+### Vec3(int, Vec2i) {#Vec3-int-Vec2i}
 
 ### Vec3(Vec3) {#Vec3-Vec3}
 
 ### Vec3(Vec3i) {#Vec3-Vec3i}
+
+### Vec3(Vec4) {#Vec3-Vec4}
+
+### Vec3(Vec4i) {#Vec3-Vec4i}
 
 ## List of Metamethods
 
@@ -73,13 +107,27 @@ This action is dangerous
 
 ### Vec3 __div(float, Vec3) {#Vec3-div-float-Vec3}
 
+### Vec3 __mod(Vec3, Vec3) {#Vec3-mod-Vec3-Vec3}
+
+### Vec3 __mod(Vec3, Vec3i) {#Vec3-mod-Vec3-Vec3i}
+
+### Vec3 __mod(Vec3, float) {#Vec3-mod-Vec3-float}
+
+### Vec3 __mod(float, Vec3) {#Vec3-mod-float-Vec3}
+
+### Vec3 __pow(Vec3, Vec3) {#Vec3-pow-Vec3-Vec3}
+
+### Vec3 __pow(Vec3, Vec3i) {#Vec3-pow-Vec3-Vec3i}
+
+### Vec3 __pow(Vec3, float) {#Vec3-pow-Vec3-float}
+
+### Vec3 __pow(float, Vec3) {#Vec3-pow-float-Vec3}
+
 ### Vec3 __unm(Vec3) {#Vec3-unm-Vec3}
 
 ### bool __eq(Vec3, Vec3) {#bool-eq-Vec3-Vec3}
 
 ### bool __eq(Vec3, Vec3i) {#bool-eq-Vec3-Vec3i}
-
-### float __len(Vec3) {#float-len-Vec3}
 
 ## List of Methods
 
@@ -88,12 +136,6 @@ This action is dangerous
 ### float SqrLength() {#float-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
-
-### float GetMinComponent() {#float-GetMinComponent}
-
-### float GetMaxComponent() {#float-GetMaxComponent}
-
-### float GetMidComponent() {#float-GetMidComponent}
 
 ### Vec3 GetAbs() {#Vec3-GetAbs}
 
