--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -11,11 +11,111 @@ id: Vec4
 
 ### Vec4(float) {#Vec4-float}
 
+### Vec4(int) {#Vec4-int}
+
 ### Vec4(float, float, float, float) {#Vec4-float-float-float-float}
+
+### Vec4(float, float, float, int) {#Vec4-float-float-float-int}
+
+### Vec4(float, float, int, float) {#Vec4-float-float-int-float}
+
+### Vec4(float, float, int, int) {#Vec4-float-float-int-int}
+
+### Vec4(float, int, float, float) {#Vec4-float-int-float-float}
+
+### Vec4(float, int, float, int) {#Vec4-float-int-float-int}
+
+### Vec4(float, int, int, float) {#Vec4-float-int-int-float}
+
+### Vec4(float, int, int, int) {#Vec4-float-int-int-int}
+
+### Vec4(int, float, float, float) {#Vec4-int-float-float-float}
+
+### Vec4(int, float, float, int) {#Vec4-int-float-float-int}
+
+### Vec4(int, float, int, float) {#Vec4-int-float-int-float}
+
+### Vec4(int, float, int, int) {#Vec4-int-float-int-int}
+
+### Vec4(int, int, float, float) {#Vec4-int-int-float-float}
+
+### Vec4(int, int, float, int) {#Vec4-int-int-float-int}
+
+### Vec4(int, int, int, float) {#Vec4-int-int-int-float}
+
+### Vec4(int, int, int, int) {#Vec4-int-int-int-int}
 
 ### Vec4(Vec2, float, float) {#Vec4-Vec2-float-float}
 
+### Vec4(Vec2, float, int) {#Vec4-Vec2-float-int}
+
+### Vec4(Vec2, int, float) {#Vec4-Vec2-int-float}
+
+### Vec4(Vec2, int, int) {#Vec4-Vec2-int-int}
+
+### Vec4(Vec2i, float, float) {#Vec4-Vec2i-float-float}
+
+### Vec4(Vec2i, float, int) {#Vec4-Vec2i-float-int}
+
+### Vec4(Vec2i, int, float) {#Vec4-Vec2i-int-float}
+
+### Vec4(Vec2i, int, int) {#Vec4-Vec2i-int-int}
+
+### Vec4(float, Vec2, float) {#Vec4-float-Vec2-float}
+
+### Vec4(float, Vec2, int) {#Vec4-float-Vec2-int}
+
+### Vec4(float, Vec2i, float) {#Vec4-float-Vec2i-float}
+
+### Vec4(float, Vec2i, int) {#Vec4-float-Vec2i-int}
+
+### Vec4(int, Vec2, float) {#Vec4-int-Vec2-float}
+
+### Vec4(int, Vec2, int) {#Vec4-int-Vec2-int}
+
+### Vec4(int, Vec2i, float) {#Vec4-int-Vec2i-float}
+
+### Vec4(int, Vec2i, int) {#Vec4-int-Vec2i-int}
+
+### Vec4(float, float, Vec2) {#Vec4-float-float-Vec2}
+
+### Vec4(float, float, Vec2i) {#Vec4-float-float-Vec2i}
+
+### Vec4(float, int, Vec2) {#Vec4-float-int-Vec2}
+
+### Vec4(float, int, Vec2i) {#Vec4-float-int-Vec2i}
+
+### Vec4(int, float, Vec2) {#Vec4-int-float-Vec2}
+
+### Vec4(int, float, Vec2i) {#Vec4-int-float-Vec2i}
+
+### Vec4(int, int, Vec2) {#Vec4-int-int-Vec2}
+
+### Vec4(int, int, Vec2i) {#Vec4-int-int-Vec2i}
+
+### Vec4(Vec2, Vec2) {#Vec4-Vec2-Vec2}
+
+### Vec4(Vec2, Vec2i) {#Vec4-Vec2-Vec2i}
+
+### Vec4(Vec2i, Vec2) {#Vec4-Vec2i-Vec2}
+
+### Vec4(Vec2i, Vec2i) {#Vec4-Vec2i-Vec2i}
+
 ### Vec4(Vec3, float) {#Vec4-Vec3-float}
+
+### Vec4(Vec3, int) {#Vec4-Vec3-int}
+
+### Vec4(Vec3i, float) {#Vec4-Vec3i-float}
+
+### Vec4(Vec3i, int) {#Vec4-Vec3i-int}
+
+### Vec4(float, Vec3) {#Vec4-float-Vec3}
+
+### Vec4(float, Vec3i) {#Vec4-float-Vec3i}
+
+### Vec4(int, Vec3) {#Vec4-int-Vec3}
+
+### Vec4(int, Vec3i) {#Vec4-int-Vec3i}
 
 ### Vec4(Vec4) {#Vec4-Vec4}
 
@@ -59,13 +159,27 @@ id: Vec4
 
 ### Vec4 __div(float, Vec4) {#Vec4-div-float-Vec4}
 
+### Vec4 __mod(Vec4, Vec4) {#Vec4-mod-Vec4-Vec4}
+
+### Vec4 __mod(Vec4, Vec4i) {#Vec4-mod-Vec4-Vec4i}
+
+### Vec4 __mod(Vec4, float) {#Vec4-mod-Vec4-float}
+
+### Vec4 __mod(float, Vec4) {#Vec4-mod-float-Vec4}
+
+### Vec4 __pow(Vec4, Vec4) {#Vec4-pow-Vec4-Vec4}
+
+### Vec4 __pow(Vec4, Vec4i) {#Vec4-pow-Vec4-Vec4i}
+
+### Vec4 __pow(Vec4, float) {#Vec4-pow-Vec4-float}
+
+### Vec4 __pow(float, Vec4) {#Vec4-pow-float-Vec4}
+
 ### Vec4 __unm(Vec4) {#Vec4-unm-Vec4}
 
 ### bool __eq(Vec4, Vec4) {#bool-eq-Vec4-Vec4}
 
 ### bool __eq(Vec4, Vec4i) {#bool-eq-Vec4-Vec4i}
-
-### float __len(Vec4) {#float-len-Vec4}
 
 ## List of Methods
 
@@ -74,10 +188,6 @@ id: Vec4
 ### float SqrLength() {#float-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
-
-### float GetMinComponent() {#float-GetMinComponent}
-
-### float GetMaxComponent() {#float-GetMaxComponent}
 
 ### Vec4 GetAbs() {#Vec4-GetAbs}
 
