--- a/docs/90-api/vec4i.mdx
+++ b/docs/90-api/vec4i.mdx
@@ -11,11 +11,111 @@ id: Vec4i
 
 ### Vec4i(int) {#Vec4i-int}
 
+### Vec4i(float) {#Vec4i-float}
+
 ### Vec4i(int, int, int, int) {#Vec4i-int-int-int-int}
+
+### Vec4i(int, int, int, float) {#Vec4i-int-int-int-float}
+
+### Vec4i(int, int, float, int) {#Vec4i-int-int-float-int}
+
+### Vec4i(int, int, float, float) {#Vec4i-int-int-float-float}
+
+### Vec4i(int, float, int, int) {#Vec4i-int-float-int-int}
+
+### Vec4i(int, float, int, float) {#Vec4i-int-float-int-float}
+
+### Vec4i(int, float, float, int) {#Vec4i-int-float-float-int}
+
+### Vec4i(int, float, float, float) {#Vec4i-int-float-float-float}
+
+### Vec4i(float, int, int, int) {#Vec4i-float-int-int-int}
+
+### Vec4i(float, int, int, float) {#Vec4i-float-int-int-float}
+
+### Vec4i(float, int, float, int) {#Vec4i-float-int-float-int}
+
+### Vec4i(float, int, float, float) {#Vec4i-float-int-float-float}
+
+### Vec4i(float, float, int, int) {#Vec4i-float-float-int-int}
+
+### Vec4i(float, float, int, float) {#Vec4i-float-float-int-float}
+
+### Vec4i(float, float, float, int) {#Vec4i-float-float-float-int}
+
+### Vec4i(float, float, float, float) {#Vec4i-float-float-float-float}
 
 ### Vec4i(Vec2i, int, int) {#Vec4i-Vec2i-int-int}
 
+### Vec4i(Vec2i, int, float) {#Vec4i-Vec2i-int-float}
+
+### Vec4i(Vec2i, float, int) {#Vec4i-Vec2i-float-int}
+
+### Vec4i(Vec2i, float, float) {#Vec4i-Vec2i-float-float}
+
+### Vec4i(Vec2, int, int) {#Vec4i-Vec2-int-int}
+
+### Vec4i(Vec2, int, float) {#Vec4i-Vec2-int-float}
+
+### Vec4i(Vec2, float, int) {#Vec4i-Vec2-float-int}
+
+### Vec4i(Vec2, float, float) {#Vec4i-Vec2-float-float}
+
+### Vec4i(int, Vec2i, int) {#Vec4i-int-Vec2i-int}
+
+### Vec4i(int, Vec2i, float) {#Vec4i-int-Vec2i-float}
+
+### Vec4i(int, Vec2, int) {#Vec4i-int-Vec2-int}
+
+### Vec4i(int, Vec2, float) {#Vec4i-int-Vec2-float}
+
+### Vec4i(float, Vec2i, int) {#Vec4i-float-Vec2i-int}
+
+### Vec4i(float, Vec2i, float) {#Vec4i-float-Vec2i-float}
+
+### Vec4i(float, Vec2, int) {#Vec4i-float-Vec2-int}
+
+### Vec4i(float, Vec2, float) {#Vec4i-float-Vec2-float}
+
+### Vec4i(int, int, Vec2i) {#Vec4i-int-int-Vec2i}
+
+### Vec4i(int, int, Vec2) {#Vec4i-int-int-Vec2}
+
+### Vec4i(int, float, Vec2i) {#Vec4i-int-float-Vec2i}
+
+### Vec4i(int, float, Vec2) {#Vec4i-int-float-Vec2}
+
+### Vec4i(float, int, Vec2i) {#Vec4i-float-int-Vec2i}
+
+### Vec4i(float, int, Vec2) {#Vec4i-float-int-Vec2}
+
+### Vec4i(float, float, Vec2i) {#Vec4i-float-float-Vec2i}
+
+### Vec4i(float, float, Vec2) {#Vec4i-float-float-Vec2}
+
+### Vec4i(Vec2i, Vec2i) {#Vec4i-Vec2i-Vec2i}
+
+### Vec4i(Vec2i, Vec2) {#Vec4i-Vec2i-Vec2}
+
+### Vec4i(Vec2, Vec2i) {#Vec4i-Vec2-Vec2i}
+
+### Vec4i(Vec2, Vec2) {#Vec4i-Vec2-Vec2}
+
 ### Vec4i(Vec3i, int) {#Vec4i-Vec3i-int}
+
+### Vec4i(Vec3i, float) {#Vec4i-Vec3i-float}
+
+### Vec4i(Vec3, int) {#Vec4i-Vec3-int}
+
+### Vec4i(Vec3, float) {#Vec4i-Vec3-float}
+
+### Vec4i(int, Vec3i) {#Vec4i-int-Vec3i}
+
+### Vec4i(int, Vec3) {#Vec4i-int-Vec3}
+
+### Vec4i(float, Vec3i) {#Vec4i-float-Vec3i}
+
+### Vec4i(float, Vec3) {#Vec4i-float-Vec3}
 
 ### Vec4i(Vec4i) {#Vec4i-Vec4i}
 
@@ -59,13 +159,27 @@ id: Vec4i
 
 ### Vec4i __div(int, Vec4i) {#Vec4i-div-int-Vec4i}
 
+### Vec4i __mod(Vec4i, Vec4i) {#Vec4i-mod-Vec4i-Vec4i}
+
+### Vec4 __mod(Vec4i, Vec4) {#Vec4-mod-Vec4i-Vec4}
+
+### Vec4i __mod(Vec4i, int) {#Vec4i-mod-Vec4i-int}
+
+### Vec4i __mod(int, Vec4i) {#Vec4i-mod-int-Vec4i}
+
+### Vec4i __pow(Vec4i, Vec4i) {#Vec4i-pow-Vec4i-Vec4i}
+
+### Vec4 __pow(Vec4i, Vec4) {#Vec4-pow-Vec4i-Vec4}
+
+### Vec4i __pow(Vec4i, int) {#Vec4i-pow-Vec4i-int}
+
+### Vec4i __pow(int, Vec4i) {#Vec4i-pow-int-Vec4i}
+
 ### Vec4i __unm(Vec4i) {#Vec4i-unm-Vec4i}
 
 ### bool __eq(Vec4i, Vec4i) {#bool-eq-Vec4i-Vec4i}
 
 ### bool __eq(Vec4i, Vec4) {#bool-eq-Vec4i-Vec4}
-
-### int __len(Vec4i) {#int-len-Vec4i}
 
 ## List of Methods
 
@@ -74,10 +188,6 @@ id: Vec4i
 ### int SqrLength() {#int-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
-
-### int GetMinComponent() {#int-GetMinComponent}
-
-### int GetMaxComponent() {#int-GetMaxComponent}
 
 ### Vec4i GetAbs() {#Vec4i-GetAbs}
 
@@ -92,10 +202,6 @@ id: Vec4i
 ### int Dot(Vec4i, Vec4i) {#int-Dot-Vec4i-Vec4i}
 
 ### float Dot(Vec4i, Vec4) {#float-Dot-Vec4i-Vec4}
-
-### Vec4i __mod(Vec4i, Vec4i) {#Vec4i-mod-Vec4i-Vec4i}
-
-### Vec4i __mod(Vec4i, int) {#Vec4i-mod-Vec4i-int}
 
 ### Vec4i __band(Vec4i, Vec4i) {#Vec4i-band-Vec4i-Vec4i}
 
@@ -119,9 +225,13 @@ id: Vec4i
 
 ### Vec4i __shl(Vec4i, Vec4i) {#Vec4i-shl-Vec4i-Vec4i}
 
+### Vec4i __shl(int, Vec4i) {#Vec4i-shl-int-Vec4i}
+
 ### Vec4i __shl(Vec4i, int) {#Vec4i-shl-Vec4i-int}
 
 ### Vec4i __shr(Vec4i, Vec4i) {#Vec4i-shr-Vec4i-Vec4i}
+
+### Vec4i __shr(int, Vec4i) {#Vec4i-shr-int-Vec4i}
 
 ### Vec4i __shr(Vec4i, int) {#Vec4i-shr-Vec4i-int}
 
