--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -173,6 +173,8 @@ id: VoxelDB
 
 ### string GetLayers() {#string-GetLayers}
 
+### Vec3 GetCenter() {#Vec3-GetCenter}
+
 ## List of Properties
 
 ### bool autoLightingUpdate {#bool-autoLightingUpdate}
