--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -154,7 +154,7 @@ end
 
 ### double GetLogTime(string) {#double-GetLogTime-string}
 
-### float GetFPS() {#float-GetFPS}
+### double GetFPS() {#double-GetFPS}
 
 ### Config GetConfigInputActions() {#Config-GetConfigInputActions}
 
@@ -216,10 +216,6 @@ end
 
 ### void CloseApp() {#void-CloseApp}
 
-### float GetDeltaTime() {#float-GetDeltaTime}
-
-### float GetTotalTime() {#float-GetTotalTime}
-
 ### Camera GetMainCamera() {#Camera-GetMainCamera}
 
 ### string GetEULA() {#string-GetEULA}
@@ -270,6 +266,8 @@ Returns [`CommandLine`](/api/commandLine)
 ### void ClearEntityPath() {#void-ClearEntityPath}
 
 ### void AddEntityPathWaypoint() {#void-AddEntityPathWaypoint}
+
+### void TakeScreenShot() {#void-TakeScreenShot}
 
 ### string GetCredits() {#string-GetCredits}
 
