--- a/docs/90-api/mat3.mdx
+++ b/docs/90-api/mat3.mdx
@@ -51,6 +51,22 @@ id: Mat3
 
 ### Mat3 __sub(float, Mat3) {#Mat3-sub-float-Mat3}
 
+### Mat3 __mul(Mat3, Mat3) {#Mat3-mul-Mat3-Mat3}
+
+### Mat3 __mul(Mat3, float) {#Mat3-mul-Mat3-float}
+
+### Mat3 __mul(float, Mat3) {#Mat3-mul-float-Mat3}
+
+### Vec3 __mul(Vec3, Mat3) {#Vec3-mul-Vec3-Mat3}
+
+### Mat3 __div(Mat3, Mat3) {#Mat3-div-Mat3-Mat3}
+
+### Mat3 __div(Mat3, float) {#Mat3-div-Mat3-float}
+
+### Mat3 __div(float, Mat3) {#Mat3-div-float-Mat3}
+
+### Vec3 __div(Vec3, Mat3) {#Vec3-div-Vec3-Mat3}
+
 ### Mat3 __unm(Mat3) {#Mat3-unm-Mat3}
 
 ### bool __eq(Mat3, Mat3) {#bool-eq-Mat3-Mat3}
