--- a/docs/90-api/mat4.mdx
+++ b/docs/90-api/mat4.mdx
@@ -67,6 +67,22 @@ id: Mat4
 
 ### Mat4 __sub(float, Mat4) {#Mat4-sub-float-Mat4}
 
+### Mat4 __mul(Mat4, Mat4) {#Mat4-mul-Mat4-Mat4}
+
+### Mat4 __mul(Mat4, float) {#Mat4-mul-Mat4-float}
+
+### Mat4 __mul(float, Mat4) {#Mat4-mul-float-Mat4}
+
+### Vec4 __mul(Vec4, Mat4) {#Vec4-mul-Vec4-Mat4}
+
+### Mat4 __div(Mat4, Mat4) {#Mat4-div-Mat4-Mat4}
+
+### Mat4 __div(Mat4, float) {#Mat4-div-Mat4-float}
+
+### Mat4 __div(float, Mat4) {#Mat4-div-float-Mat4}
+
+### Vec4 __div(Vec4, Mat4) {#Vec4-div-Vec4-Mat4}
+
 ### Mat4 __unm(Mat4) {#Mat4-unm-Mat4}
 
 ### bool __eq(Mat4, Mat4) {#bool-eq-Mat4-Mat4}
