--- a/docs/90-api/meshData.mdx
+++ b/docs/90-api/meshData.mdx
@@ -5,6 +5,10 @@ id: MeshData
 `Client`
 `Server`
 
+## List of Metamethods
+
+### bool __eq(MeshData, MeshData) {#bool-eq-MeshData-MeshData}
+
 ## List of Properties
 
 ### string file {#string-file}
