--- a/docs/90-api/meshRender.mdx
+++ b/docs/90-api/meshRender.mdx
@@ -5,6 +5,10 @@ id: MeshRender
 `Client`
 `Server`
 
+## List of Metamethods
+
+### bool __eq(MeshRender, MeshRender) {#bool-eq-MeshRender-MeshRender}
+
 ## List of Properties
 
 ### userdata material {#userdata-material}
