--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -7,13 +7,15 @@ id: Object
 
 ## List of Methods
 
-### void RemoveAllNonNativeComponents(Object) {#void-RemoveAllNonNativeComponents-Object}
+### void RemoveAllNonNativeComponents() {#void-RemoveAllNonNativeComponents}
 
 ### userdata AddComponent(string) {#userdata-AddComponent-string}
 
 ### userdata GetComponent(int) {#userdata-GetComponent-int}
 
 ### table GetComponents() {#table-GetComponents}
+
+### bool RemoveComponent(userdata) {#bool-RemoveComponent-userdata}
 
 ### userdata RemoveComponent(string) {#userdata-RemoveComponent-string}
 
@@ -29,6 +31,14 @@ id: Object
 
 ### string tag {#string-tag}
 
+### Transform transform {#Transform-transform}
+
+### userdata parent {#userdata-parent}
+
+### table components {#table-components}
+
+### table children {#table-children}
+
 ### int id {#int-id}
 
 ### bool isDestroyed {#bool-isDestroyed}
@@ -38,8 +48,6 @@ id: Object
 ### bool update {#bool-update}
 
 ### bool active {#bool-active}
-
-### Transform transform {#Transform-transform}
 
 ### bool dontSave {#bool-dontSave}
 
