--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -9,7 +9,7 @@ id: Scene
 
 ### double GetTime() {#double-GetTime}
 
-### double GetTimeDelta() {#double-GetTimeDelta}
+### double GetDeltaTime() {#double-GetDeltaTime}
 
 ### double GetDebugTime() {#double-GetDebugTime}
 
@@ -33,7 +33,13 @@ id: Scene
 
 ### table GetObjectsByTag(string) {#table-GetObjectsByTag-string}
 
-### bool Save(string) {#bool-Save-string}
+### Object GetObjectById(int) {#Object-GetObjectById-int}
+
+### bool IsNameValid(string) {#bool-IsNameValid-string}
+
+### bool Save() {#bool-Save}
+
+### bool SaveAs(string) {#bool-SaveAs-string}
 
 ### int Merge(string) {#int-Merge-string}
 
