--- a/docs/90-api/scriptComponent.mdx
+++ b/docs/90-api/scriptComponent.mdx
@@ -68,6 +68,8 @@ end
 
 ### void SetSyncToClient(bool) {#void-SetSyncToClient-bool}
 
+### bool AssignScript(string) {#bool-AssignScript-string}
+
 ### void SendMessage(string, table) {#void-SendMessage-string-table}
 
 ### void SendMessage(string, table, int) {#void-SendMessage-string-table-int}
