--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -5,6 +5,10 @@ id: VoxelData
 `Client`
 `Server`
 
+## List of Metamethods
+
+### bool __eq(VoxelData, VoxelData) {#bool-eq-VoxelData-VoxelData}
+
 ## List of Properties
 
 ### string resource {#string-resource}
