--- a/docs/90-api/voxelRender.mdx
+++ b/docs/90-api/voxelRender.mdx
@@ -5,6 +5,10 @@ id: VoxelRender
 `Client`
 `Server`
 
+## List of Metamethods
+
+### bool __eq(VoxelRender, VoxelRender) {#bool-eq-VoxelRender-VoxelRender}
+
 ## List of Properties
 
 ### string type {#string-type}
