--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -21,6 +21,8 @@ This class is only available on server
 
 ### bool ReloadScripts() {#bool-ReloadScripts}
 
+### table GetLuaFilesList() {#table-GetLuaFilesList}
+
 ### userdata GetVoxelClientIDs() {#userdata-GetVoxelClientIDs}
 
 ### table GetVoxelStreamStats(int clientID) {#table-GetVoxelStreamStats-int-clientID}
